--- a/index.html
+++ b/index.html
@@ -55,22 +55,10 @@
   <!-- FIREBASE SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="firebase.js"></script>
+  <script src="app.js"></script>
 
-  <!-- FIREBASE CONFIG -->
-  <script>
-    const firebaseConfig = {
-  apiKey: "AIzaSyCHxK7Zg-JJB4fYiXe2J_Z-wcLeTIdDm1c",
-  authDomain: "kk-stock-analysis-d7b43.firebaseapp.com",
-  projectId: "kk-stock-analysis-d7b43",
-  storageBucket: "kk-stock-analysis-d7b43.firebasestorage.app",
-  messagingSenderId: "338926544975",
-  appId: "1:338926544975:web:f1598c672a002f706ca23a"
-};
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-  </script>
-
+  
   <!-- APP LOGIC -->
   <script>
     function showSignup() {
@@ -82,6 +70,7 @@
     function showLogin() {
       document.getElementById("signupPage").style.display = "none";
       document.getElementById("loginPage").style.display = "block";
+
 
 
 
