--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     <input type="email" id="loginEmail" placeholder="Email">
     <input type="password" id="loginPassword" placeholder="Password">
 
+    <!-- ADMIN PANEL -->
+<div id="adminPanel" style="margin-top:30px; border-top:1px solid #ccc; padding-top:20px;">
+  <h3>Admin – Manage Stocks</h3>
+
+  <input
+    type="text"
+    id="newStockSymbol"
+    placeholder="Enter stock symbol (e.g. RELIANCE.NS)"
+  />
+
+  <button onclick="addStock()">Add Stock</button>
+
+  <p id="adminMessage"></p>
+</div>
+
     <button onclick="login()">Login</button>
 
     <p>
@@ -79,5 +94,6 @@
 
 </body>
 </html>
+
 
 
