--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
   <script src="firebase.js"></script>
+  <script src="auth.js"></script>
   <script src="app.js"></script>
 
 </body>
 </html>
+
 
 
