--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
   <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
   <script src="firebase.js"></script>
   <script src="auth.js"></script>
+  <script src="stocks.js"></script>
   <script src="app.js"></script>
 
 </body>
 </html>
+
 
 
 
